--- a/SchoolDiarySystem/Views/Comment/Create.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Create.cshtml
@@ -1,4 +1,8 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Create Comment";
+    Layout = "~/Views/Shared/_LayoutTeacher.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Comments
 
 <div class="dashboard-page-one">
