--- a/SchoolDiarySystem/Views/Comment/Update.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Update.cshtml
@@ -1,8 +1,11 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Update Comment";
+    Layout = "~/Views/Shared/_LayoutTeacher.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Comments
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Comment</h3>
             <ul>
@@ -12,8 +15,6 @@
                 <li>Update Comment</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Add New Teacher Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
