--- a/SchoolDiarySystem/Views/Director/Index.cshtml
+++ b/SchoolDiarySystem/Views/Director/Index.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    ViewBag.Title = "ParentDetails";
+﻿@{
+    ViewBag.Title = "Director's Dashboard";
     Layout = "~/Views/Shared/_LayoutDirector.cshtml";
 }
 @using SchoolDiarySystem.Models
@@ -8,11 +7,8 @@
 
 <div class="dashboard-page-one" style="height: 100%; position:relative;">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
