--- a/SchoolDiarySystem/Views/MyKids/Index.cshtml
+++ b/SchoolDiarySystem/Views/MyKids/Index.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    ViewBag.Title = "Index";
+﻿@{
+    ViewBag.Title = "Parent's Dashboard";
     Layout = "~/Views/Shared/_LayoutParent.cshtml";
 }
 @using SchoolDiarySystem.Models
@@ -8,7 +7,6 @@
 
 <div class="dashboard-page-one" style="position: relative; height: 100%;">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Parent Dashboard</h3>
             <ul>
