--- a/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
@@ -33,6 +33,8 @@
     <link rel="stylesheet" href="~/Content/css/datepicker.min.css">
     <!-- Full Calender CSS -->
     <link rel="stylesheet" href="~/Content/css/fullcalendar.min.css">
+    <!-- Data Table CSS -->
+    <link rel="stylesheet" href="~/Content/css/jquery.dataTables.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/Content/style.css">
     <!-- Modernize js -->
@@ -177,6 +179,8 @@
     <script src="~/Content/js/fullcalendar.min.js"></script>
     <!-- Select 2 Js -->
     <script src="js/select2.min.js"></script>
+    <!-- Data Table Js -->
+    <script src="~/Content/js/jquery.dataTables.min.js"></script>
     <!-- Date Picker Js -->
     <script src="js/datepicker.min.js"></script>
     <!-- Chart Js -->
