--- a/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="~/Content/css/animate.min.css">
     <!-- Select 2 CSS -->
     <link rel="stylesheet" href="~/Content/css/select2.min.css">
+    <!-- Data Table CSS -->
+    <link rel="stylesheet" href="~/Content/css/jquery.dataTables.min.css">
     <!-- Date Picker CSS -->
     <link rel="stylesheet" href="~/Content/css/datepicker.min.css">
     <!-- Full Calender CSS -->
@@ -164,9 +166,11 @@
     <!-- Full Calender Js -->
     <script src="~/Content/js/fullcalendar.min.js"></script>
     <!-- Select 2 Js -->
-    <script src="js/select2.min.js"></script>
+    <script src="~/Content/js/select2.min.js"></script>
     <!-- Date Picker Js -->
-    <script src="js/datepicker.min.js"></script>
+    <script src="~/Content/js/datepicker.min.js"></script>
+    <!-- Data Table Js -->
+    <script src="~/Content/js/jquery.dataTables.min.js"></script>
     <!-- Chart Js -->
     <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
