--- a/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
@@ -33,6 +33,8 @@
     <link rel="stylesheet" href="~/Content/css/datepicker.min.css">
     <!-- Full Calender CSS -->
     <link rel="stylesheet" href="~/Content/css/fullcalendar.min.css">
+    <!-- Data Table CSS -->
+    <link rel="stylesheet" href="~/Content/css/jquery.dataTables.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/Content/style.css">
     <!-- Modernize js -->
@@ -179,6 +181,8 @@
     <script src="js/datepicker.min.js"></script>
     <!-- Chart Js -->
     <script src="~/Content/js/Chart.min.js"></script>
+    <!-- Data Table Js -->
+    <script src="~/Content/js/jquery.dataTables.min.js"></script>
     <!-- Custom Js -->
     <script src="~/Content/js/main.js"></script>
     <!-- Modernize js -->
