--- a/SchoolDiarySystem/Views/Topic/Details.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Details.cshtml
@@ -1,9 +1,12 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Topic Details";
+    Layout = "~/Views/Shared/_LayoutTeacher.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Topics
 
 <div class="dashboard-page-one" style="height: 100%; position:relative;">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Topic</h3>
             <ul>
@@ -13,8 +16,6 @@
                 <li>Topic Details</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
