--- a/SchoolDiarySystem/Views/User/Details.cshtml
+++ b/SchoolDiarySystem/Views/User/Details.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    ViewBag.Title = "ParentDetails";
+﻿@{
+    ViewBag.Title = "User Details";
     Layout = "~/Views/Shared/_LayoutDirector.cshtml";
 }
 @using SchoolDiarySystem.Models
@@ -8,23 +7,20 @@
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
-            <h3>Parent</h3>
+            <h3>User</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Director")">Home</a>
                 </li>
-                <li>Admin User Details</li>
+                <li>User Details</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>Admin User Details</h3>
+                        <h3>User Details</h3>
                     </div>
                 </div>
                 <div class="single-info-details">
@@ -33,7 +29,20 @@
                     </div>
                     <div class="item-content">
                         <div class="header-inline item-header">
-                            @Html.Label(Model.FullName, new { @class = "text-dark-medium font-medium" })
+                            <h3 class="text-dark-medium font-medium">
+                                @if (Model.RoleID == 1)
+                                {
+                                    @Html.Label("FullName", Model.FullName, new { @class = "text-dark-medium font-medium" })
+                                }
+                                else if (Model.RoleID == 2)
+                                {
+                                    @Html.Label(Model.Teacher.FullName, new { @class = "font-medium text-dark-medium" })
+                                }
+                                else if (Model.RoleID == 4)
+                                {
+                                    @Html.Label(Model.Parent.FullName, new { @class = "font-medium text-dark-medium" })
+                                }
+                            </h3>
                             <div class="header-elements">
                                 <ul>
                                     <li><a href="#"><i class="fas fa-print"></i></a></li>
@@ -50,12 +59,44 @@
                                             <td>Admin Name:</td>
                                             <td>@Html.Label(Model.FullName, new { @class = "font-medium text-dark-medium" })</td>
                                         </tr>
+                                        <tr>
+                                            <td>Username:</td>
+                                            <td>@Html.Label(Model.Username, new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Expire Date:</td>
+                                            <td>@Html.Label(Model.ExpiresDate.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Last Login Date:</td>
+                                            <td>@Html.Label(Model.LastLoginDate.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Last Login Time:</td>
+                                            <td>@Html.Label(Model.LastLoginTime.ToString("hh:mm tt"), new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
                                     }
                                     else if (Model.RoleID == 2)
                                     {
                                         <tr>
                                             <td>Teacher:</td>
                                             <td>@Html.Label(Model.Teacher.FullName, new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Username:</td>
+                                            <td>@Html.Label(Model.Username, new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Expire Date:</td>
+                                            <td>@Html.Label(Model.ExpiresDate.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Last Login Date:</td>
+                                            <td>@Html.Label(Model.LastLoginDate.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Last Login Time:</td>
+                                            <td>@Html.Label(Model.LastLoginTime.ToString("hh:mm tt"), new { @class = "font-medium text-dark-medium" })</td>
                                         </tr>
                                     }
                                     else if (Model.RoleID == 4)
@@ -64,19 +105,23 @@
                                             <td>Parent:</td>
                                             <td>@Html.Label(Model.Parent.FullName, new { @class = "font-medium text-dark-medium" })</td>
                                         </tr>
+                                        <tr>
+                                            <td>Username:</td>
+                                            <td>@Html.Label(Model.Username, new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Expire Date:</td>
+                                            <td>@Html.Label(Model.ExpiresDate.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Last Login Date:</td>
+                                            <td>@Html.Label(Model.LastLoginDate.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Last Login Time:</td>
+                                            <td>@Html.Label(Model.LastLoginTime.ToString("hh:mm tt"), new { @class = "font-medium text-dark-medium" })</td>
+                                        </tr>
                                     }
-                                    <tr>
-                                        <td>Username:</td>
-                                        <td>@Html.Label(Model.Username, new { @class = "font-medium text-dark-medium" })</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Expire Date:</td>
-                                        <td>@Html.Label(Model.ExpiresDate.ToString(), new { @class = "font-medium text-dark-medium" })</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Last Login Date:</td>
-                                        <td>@Html.Label(Model.LastLoginDate.ToString(), new { @class = "font-medium text-dark-medium" })</td>
-                                    </tr>
                                     @if (Model.IsPasswordChanged != true)
                                     {
                                         <tr>
