--- a/SchoolDiarySystem/Views/Class/Create.cshtml
+++ b/SchoolDiarySystem/Views/Class/Create.cshtml
@@ -1,24 +1,26 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Create Class";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Class
+
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Class Create Form</h3>
             <ul>
                 <li>
                     <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
-                <li>Add New Class</li>
+                <li>Create Class</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Add New Teacher Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>Add New Class</h3>
+                        <h3>Create Class</h3>
                     </div>
                 </div>
                 @using (Html.BeginForm("Create", "Class", FormMethod.Post))
