--- a/SchoolDiarySystem/Views/Class/Delete.cshtml
+++ b/SchoolDiarySystem/Views/Class/Delete.cshtml
@@ -1,20 +1,21 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Delete Class";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Class
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Class</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
                 <li>Class Details</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
@@ -25,7 +26,7 @@
                 <div class="single-info-details">
                     <div class="item-content">
                         <div class="header-inline item-header">
-                            @Html.Label(Model.ClassNo.ToString(), new { @class = "text-dark-medium font-medium" });
+                            <h3 class="text-dark-medium font-medium">@Html.Label("ClassNo", Model.ClassNo.ToString(), new { @class = "text-dark-medium font-medium" })</h3>
                         </div>
                         <div class="info-table table-responsive">
                             <table class="table text-nowrap">
