--- a/SchoolDiarySystem/Views/Class/Index.cshtml
+++ b/SchoolDiarySystem/Views/Class/Index.cshtml
@@ -1,14 +1,17 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Classes List";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model IEnumerable<Class>
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Class</h3>
             <ul>
                 <li>
-                    <a href="~/Views/Admin/Index.cshtml">Home</a>
+                    <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
                 <li>All Classes</li>
             </ul>
@@ -33,8 +36,6 @@
                 </div>
             </div>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Teacher Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
@@ -59,6 +60,7 @@
                     <table class="table display data-table text-nowrap">
                         <thead>
                             <tr>
+                                <th></th>
                                 <th>Name</th>
                                 <th>Class Number</th>
                                 <th>Room Type</th>
@@ -69,6 +71,7 @@
                             @foreach (var item in Model)
                             {
                                 <tr>
+                                    <td></td>
                                     <td>
                                         @Html.DisplayFor(m => item.Teacher.FullName)
                                     </td>
@@ -80,9 +83,16 @@
                                     </td>
 
                                     <td>
-                                        @Html.ActionLink("Update", "Update", new { id = item.ClassID })
-                                        @Html.ActionLink("Details", "Details", new { id = item.ClassID })
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.ClassID })
+                                        <div class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                                <span class="flaticon-more-button-of-three-dots"></span>
+                                            </a>
+                                            <div class="dropdown-menu dropdown-menu-right">
+                                                <a class="dropdown-item" href="@Url.Action("Delete", "Class", new { id = item.ClassID })"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                                <a class="dropdown-item" href="@Url.Action("Update", "Class", new { id = item.ClassID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
+                                                <a class="dropdown-item" href="@Url.Action("Details", "Class", new { id = item.ClassID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                             }
