--- a/SchoolDiarySystem/Views/Parent/Delete.cshtml
+++ b/SchoolDiarySystem/Views/Parent/Delete.cshtml
@@ -1,34 +1,35 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Delete Parent";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Parents
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
-            <h3>Teacher</h3>
+            <h3>Parent</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
-                <li>Teacher Details</li>
+                <li>Parent Details</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>Are you sure you want to delete this teacher?</h3>
+                        <h3>Are you sure you want to delete this parent?</h3>
                     </div>
                 </div>
                 <div class="single-info-details">
                     <div class="item-img">
-                        <img src="~/Content/img/figure/teacher.jpg" alt="teacher">
+                        <img src="~/Content/img/figure/teacher.jpg" alt="parent">
                     </div>
                     <div class="item-content">
                         <div class="header-inline item-header">
-                            @Html.Label(Model.FullName, new { @class = "text-dark-medium font-medium" })
+                            <h3 class="text-dark-medium font-medium">@Html.Label("FullName", Model.FullName, new { @class = "text-dark-medium font-medium" })</h3>
                         </div>
                         <div class="info-table table-responsive">
                             <table class="table text-nowrap">
