--- a/SchoolDiarySystem/Views/Room/Details.cshtml
+++ b/SchoolDiarySystem/Views/Room/Details.cshtml
@@ -1,26 +1,27 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Room Details";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Rooms
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Room</h3>
             <ul>
                 <li>
-                    <a href="~/Views/Admin/Index.cshtml">Home</a>
+                    <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
                 <li>Room Details</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="single-info-details">
                     <div class="item-content">
                         <div class="header-inline item-header">
-                            <h3>@Html.Label(Model.RoomType, new { @class = "text-dark-medium font-medium" })</h3>
+                            <h3 class="text-dark-medium font-medium">@Html.Label("RoomType", Model.RoomType, new { @class = "text-dark-medium font-medium" })</h3>
                             <div class="header-elements">
                                 <ul>
                                     <li><a href="#"><i class="fas fa-print"></i></a></li>
