--- a/SchoolDiarySystem/Views/Room/Index.cshtml
+++ b/SchoolDiarySystem/Views/Room/Index.cshtml
@@ -1,14 +1,17 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Room's List";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model IEnumerable<Rooms>
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Room</h3>
             <ul>
                 <li>
-                    <a href="~/Views/Admin/Index.cshtml">Home</a>
+                    <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
                 <li>All Rooms</li>
             </ul>
@@ -33,8 +36,6 @@
                 </div>
             </div>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Teacher Table Area Start Here -->
         <div class="col-8-xxxl col-12">
             <div class="card height-auto">
                 <div class="card-body">
@@ -77,9 +78,16 @@
                                         </td>
 
                                         <td>
-                                            @Html.ActionLink("Update", "Update", new { id = item.RoomID }) |
-                                            @Html.ActionLink("Details", "Details", new { id = item.RoomID }) |
-                                            @Html.ActionLink("Delete", "Delete", new { id = item.RoomID })
+                                            <div class="dropdown">
+                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                                    <span class="flaticon-more-button-of-three-dots"></span>
+                                                </a>
+                                                <div class="dropdown-menu dropdown-menu-right">
+                                                    <a class="dropdown-item" href="@Url.Action("Delete", "Room", new { id = item.RoomID })"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                                    <a class="dropdown-item" href="@Url.Action("Update", "Room", new { id = item.RoomID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
+                                                    <a class="dropdown-item" href="@Url.Action("Details", "Room", new { id = item.RoomID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                 }
