--- a/SchoolDiarySystem/Views/Student/Delete.cshtml
+++ b/SchoolDiarySystem/Views/Student/Delete.cshtml
@@ -1,34 +1,42 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Delete Student";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Students
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
-            <h3>Teacher</h3>
+            <h3>Student</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
-                <li>Teacher Details</li>
+                <li>Student Details</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>Are you sure you want to delete this teacher?</h3>
+                        <h3>Are you sure you want to delete this student?</h3>
                     </div>
                 </div>
                 <div class="single-info-details">
                     <div class="item-img">
-                        <img src="~/Content/img/figure/teacher.jpg" alt="teacher">
+                        @if (Model.Gender != "Male")
+                        {
+                            <img src="~/Content/img/figure/user2.jpg" alt="teacher">
+                        }
+                        else
+                        {
+                            <img src="~/Content/img/figure/teacher.jpg" alt="teacher">
+                        }
                     </div>
                     <div class="item-content">
                         <div class="header-inline item-header">
-                            @Html.Label(Model.FullName, new { @class = "text-dark-medium font-medium" })
+                            <h3 class="text-dark-medium font-medium">@Html.Label("FullName", Model.FullName, new { @class = "text-dark-medium font-medium" })</h3>
                         </div>
                         <div class="info-table table-responsive">
                             <table class="table text-nowrap">
@@ -43,7 +51,7 @@
                                     </tr>
                                     <tr>
                                         <td>Birthday:</td>
-                                        <td>@Html.Label(Model.DayofBirth.ToString(), new { @class = "font-medium text-dark-medium" })</td>
+                                        <td>@Html.Label(Model.DayofBirth.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
                                         <td>E-mail:</td>
