--- a/SchoolDiarySystem/Views/Student/Update.cshtml
+++ b/SchoolDiarySystem/Views/Student/Update.cshtml
@@ -1,25 +1,26 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Update Student";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Students
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
-            <h3>Teacher</h3>
+            <h3>Student</h3>
             <ul>
                 <li>
                     <a href="index-2.html">Home</a>
                 </li>
-                <li>Add New Teacher</li>
+                <li>Update Student</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Add New Teacher Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>Add New Teacher</h3>
+                        <h3>Update Student</h3>
                     </div>
                 </div>
                 @using (Html.BeginForm("Update", "Student", FormMethod.Post))
