--- a/SchoolDiarySystem/Views/Teacher/Details.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Details.cshtml
@@ -1,20 +1,21 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Teacher Details";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Teachers
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Teacher</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
                 <li>Teacher Details</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
@@ -35,7 +36,7 @@
                     </div>
                     <div class="item-content">
                         <div class="header-inline item-header">
-                            @Html.Label(Model.FullName, new { @class = "text-dark-medium font-medium" })
+                            <h3 class="text-dark-medium font-medium">@Html.Label("FullName", Model.FullName, new { @class = "text-dark-medium font-medium" })</h3>
                             <div class="header-elements">
                                 <ul>
                                     <li><a href="#"><i class="fas fa-print"></i></a></li>
@@ -64,7 +65,7 @@
                                     </tr>
                                     <tr>
                                         <td>Birthday:</td>
-                                        <td>@Html.Label(Model.DayofBirth.ToString(), new { @class = "font-medium text-dark-medium" })</td>
+                                        <td>@Html.Label(Model.DayofBirth.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
                                         <td>E-mail:</td>
