--- a/SchoolDiarySystem/Views/Teacher/Index.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Index.cshtml
@@ -1,16 +1,19 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Teacher's List";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model IEnumerable<Teachers>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <div id="wrapper" class="wrapper bg-ash">
     <div class="dashboard-page-one">
         <div class="dashboard-content-one">
-            <!-- Breadcubs Area Start Here -->
             <div class="breadcrumbs-area">
                 <h3>Teacher</h3>
                 <ul>
                     <li>
-                        <a href="~/Views/Admin/Index.cshtml">Home</a>
+                        <a href="@Url.Action("Index", "Admin")">Home</a>
                     </li>
                     <li>All Teachers</li>
                 </ul>
@@ -35,8 +38,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Breadcubs Area End Here -->
-            <!-- Teacher Table Area Start Here -->
             <div class="card height-auto">
                 <div class="card-body">
                     <div class="heading-layout1">
@@ -62,6 +63,7 @@
                             <table class="table display data-table text-nowrap">
                                 <thead>
                                     <tr>
+                                        <th></th>
                                         <th>First Name</th>
                                         <th>Last Name</th>
                                         <th>Gender</th>
@@ -73,23 +75,11 @@
                                         <th></th>
                                     </tr>
                                 </thead>
-                                <tfoot>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(m => m.FirstName)</th>
-                                        <th>@Html.DisplayNameFor(m => m.LastName)</th>
-                                        <th>@Html.DisplayNameFor(m => m.Gender)</th>
-                                        <th>@Html.DisplayNameFor(m => m.City)</th>
-                                        <th>@Html.DisplayNameFor(m => m.Qualification)</th>
-                                        <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
-                                        <th>@Html.DisplayNameFor(m => m.Email)</th>
-                                        <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
-                                        <th></th>
-                                    </tr>
-                                </tfoot>
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
                                         <tr>
+                                            <td></td>
                                             <td>
                                                 @Html.DisplayFor(m => item.FirstName)
                                             </td>
@@ -116,9 +106,16 @@
                                             </td>
 
                                             <td>
-                                                @Html.ActionLink("Update", "Update", new { id = item.TeacherID })
-                                                @Html.ActionLink("Details", "Details", new { id = item.TeacherID })
-                                                @Html.ActionLink("Delete", "Delete", new { id = item.TeacherID })
+                                                <div class="dropdown">
+                                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                                        <span class="flaticon-more-button-of-three-dots"></span>
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right">
+                                                        <a class="dropdown-item" href="@Url.Action("Delete", "Teacher", new { id = item.TeacherID })"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                                        <a class="dropdown-item" href="@Url.Action("Update", "Teacher", new { id = item.TeacherID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
+                                                        <a class="dropdown-item" href="@Url.Action("Details", "Teacher", new { id = item.TeacherID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>
+                                                    </div>
+                                                </div>
                                             </td>
                                         </tr>
                                     }
