--- a/SchoolDiarySystem/Views/Topic/Delete.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Delete.cshtml
@@ -1,25 +1,26 @@
-﻿@using SchoolDiarySystem.Models
+﻿@{
+    ViewBag.Title = "Update Topic";
+    Layout = "~/Views/Shared/_LayoutTeacher.cshtml";
+}
+@using SchoolDiarySystem.Models
 @model Topics
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
-            <h3>Teacher</h3>
+            <h3>Topic</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Professor")">Home</a>
                 </li>
-                <li>Teacher Details</li>
+                <li>Topic Details</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>Are you sure you want to delete this teacher?</h3>
+                        <h3>Are you sure you want to delete this topic?</h3>
                     </div>
                 </div>
                 <div class="single-info-details">
@@ -28,23 +29,23 @@
                             <table class="table text-nowrap">
                                 <tbody>
                                     <tr>
-                                        <td>Name:</td>
-                                        <td>@Html.Label(Model.TopicDate.ToString(), new { @class = "font-medium text-dark-medium" })</td>
+                                        <td>Date:</td>
+                                        <td>@Html.Label(Model.TopicDate.ToString("dd MMMM yyyy"), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
-                                        <td>Gender:</td>
+                                        <td>Class Time:</td>
                                         <td>@Html.Label(Model.Time.ToString(), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
-                                        <td>Birthday:</td>
-                                        <td>@Html.Label(Model.Content.ToString(), new { @class = "font-medium text-dark-medium" })</td>
+                                        <td>Content:</td>
+                                        <td>@Html.Label("Content", Model.Content.ToString(), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
-                                        <td>E-mail:</td>
+                                        <td>Class:</td>
                                         <td>@Html.Label(Model.Class.ClassNo.ToString(), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
-                                        <td>Phone Number:</td>
+                                        <td>Subject:</td>
                                         <td>@Html.Label(Model.Subject.SubjectTitle, new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                 </tbody>
